[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/countdown_bar/CountdownBar.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 1, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.176471, 0.176471, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="CountdownBar" type="ProgressBar"]
anchor_right = 1.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 36 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 10.0
value = 2.0
percent_visible = false
script = ExtResource( 1 )

[node name="CountdownLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
